[js]verifica mail

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <title>mail - dadi</title>
+    <title>Mail - Dadi</title>
 </head>
 <body>
     
-    <div class="container ft-container">
-        
+    <div class="container ft-container ">
+        <h1 class=" text-center" id="mail"></h1>
     </div>
 
     <script src="js/script.js"></script>
