[js]lancio dadi

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     
     <div class="container ft-container ">
         <h1 class=" text-center" id="mail"></h1>
+
+        <button id="bottone" class="btn-outline-dark">Lancia i dati</button>
+        <div class="result">
+            <p  id="result"></p>
+            <p  id="numberpc"></p>
+            <p  id="numberuser"></p>
+
+        </div>
     </div>
 
     <script src="js/script.js"></script>
