[js]risultato dadi

--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
         <button id="bottone" class="btn-outline-dark">Lancia i dati</button>
         <div class="result">
             <p  id="result"></p>
-            <p  id="numberpc"></p>
-            <p  id="numberuser"></p>
+            <div>
+                <p>pc</p>
+                <p id="numberpc"></p>
+            </div>
+            <div>
+                <p>user</p>
+                <p id="numberuser"></p>
+            </div>
 
         </div>
     </div>
