--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
 </head>
 <body>
     
-    <div class="container ft-container ">
+    <div class="container ft-container text-center d-flex flex-column ">
         <h1 class=" text-center" id="mail"></h1>
 
-        <button id="bottone" class="btn-outline-dark">Lancia i dati</button>
-        <div class="result">
-            <p  id="result"></p>
-            <div>
-                <p>pc</p>
-                <p id="numberpc"></p>
+        <div class="container-sm py-5">
+            <button id="bottone" class=" btn btn-outline-light fs-2">Lancia i dati</button>
+
+        <div class="result p-5 justify-content-center align-items-center">
+            <label for="">Hai vinto o perso?</label>
+            <p id="result"></p>
+            <div class="d-flex">
+                <label for="">PC --></label>
+                <p id="numberpc" class=""></p>
             </div>
-            <div>
-                <p>user</p>
-                <p id="numberuser"></p>
+            <div class="d-flex">
+                <label for="">USER --></label>
+                <p id="numberuser" class=""></p>
             </div>
 
+        </div>
         </div>
     </div>
 
